# WeighIn

./: .gitignore  README.md  action.yml  package.json  weighin-fixtures.json  weighin.toml
.github/workflows/: ci.yml  weighin.yml
bundled/: index.js  licenses.txt
contract/: Cargo.toml
scripts/: start-local-network.sh
src/: action.ts  cli.ts  comment.ts  diff.ts  measurement.ts  threshold.ts
